Мой финальный HTML проект

--- a/html/mac.html
+++ b/html/mac.html
@@ -12,13 +12,23 @@
    <body>
       <!--Card-->
       <div class="card animated fadeIn">
-         <p class="subtitle">Терминал MacOS</p>
+         <p class="subtitle">Командная строка macOS</p>
          <ul>
             <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
             <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mv - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mkdir - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
+            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл.</li>
+            <li>touch - создать файл</li>
+            <li>cp - скопировать файл</li>
+            <li>rm - удалить файл</li>
+            <li>cat - посмотреть содержимое файла</li>
+            <li>open - открыть файл или папку</li>
+            <li>grep - найти текст в файлах</li>
+            <li>find - найти файлы</li>
+            <li>man - получить справку</li>
+            <li>clear - очистить экран</li>
+            <li>history - посмотреть историю команд</li>
          </ul>
       </div>
       <!--footer-->
